--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@types/react-redux": "^7.1.33",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
+    "react-redux": "^9.1.1",
     "react-resizable": "^3.0.5"
   },
   "devDependencies": {
